--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ matrix:
       before_script:
         - cd backend
       script:
-        - go build && go test
+        - go build && go test && ./done-hook.sh
 
