--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ matrix:
       script:
         - go build && go test 
 
-script: echo script && ./done-hook.sh
+script: echo script && ./zzdone-hook.sh
