--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,30 @@
-# check different combinations of build flags which is able to divide builds into “jobs”.
-matrix:
-# Helps to run different languages in one .travis.yml file
- include:
-# First Job in Python language.
- - language: cpp
-  before_script:
-    - cd client
-  script:
-    - ./build.sh && ./test.sh 
- 
-# Second Job in node js language.
- - language: go
-   go:
-     - "1.9"
-   before_script:
-     - cd backend
-   script:
-     - go build && go test 
-  after_success:
-   - echo done
+language: go
 
 
+
+## check different combinations of build flags which is able to divide builds into “jobs”.
+#matrix:
+## Helps to run different languages in one .travis.yml file
+# include:
+## First Job in Python language.
+# - language: cpp
+#  before_script:
+#    - cd client
+#  script:
+#    - ./build.sh && ./test.sh 
+# 
+## Second Job in node js language.
+# - language: go
+#   go:
+#     - "1.9"
+#   before_script:
+#     - cd backend
+#   script:
+#     - go build && go test 
+#  after_success:
+#   - echo done
+#
+#
 
 #stages:
 #  - test
