--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,29 @@
-language: go
 
 
 
-## check different combinations of build flags which is able to divide builds into “jobs”.
-#matrix:
-## Helps to run different languages in one .travis.yml file
-# include:
-## First Job in Python language.
-# - language: cpp
-#  before_script:
-#    - cd client
-#  script:
-#    - ./build.sh && ./test.sh 
-# 
-## Second Job in node js language.
-# - language: go
-#   go:
-#     - "1.9"
-#   before_script:
-#     - cd backend
-#   script:
-#     - go build && go test 
-#  after_success:
-#   - echo done
-#
-#
+# check different combinations of build flags which is able to divide builds into “jobs”.
+matrix:
+# Helps to run different languages in one .travis.yml file
+include:
+# First Job in Python language.
+- language: cpp
+before_script:
+- cd client
+script:
+- ./build.sh && ./test.sh 
+ 
+# Second Job in node js language.
+- language: go
+go:
+- "1.9"
+before_script:
+- cd backend
+script:
+- go build && go test 
+after_success:
+- echo done
+
+
 
 #stages:
 #  - test
