--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 
 
 
-- language: cpp
+language: cpp
 # check different combinations of build flags which is able to divide builds into “jobs”.
 matrix:
 # Helps to run different languages in one .travis.yml file
